# ilc-client

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  FRAMEWORK_GAPS.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  preflight.yml
examples/: abc.py  chart_v2.py
scripts/: bootstrap_and_test.sh  build_mnist_fixture.py  ci_live_smoke.sh  ci_preflight.sh  configure_github_live_smoke.sh  executable_benchmark_smoke.sh  generate_keypair.sh  install_tinychain_local.sh  integration_smoke.sh  mint_ci_tokens.py  run_abc_quickstart.sh  run_executable_benchmark.sh
src/ilc/: __init__.py  config.py  example_ops.py  library.py  runtime.py
src/ilc/executable/: __init__.py  benchmark.py  encoding.py  errors.py  metrics.py  program.py  protocol.py  runtime.py  session.py  tensors.py  validation.py  workloads.py
src/ilc/executable/fixtures/: __init__.py  mnist_v1.json
src/ilc/executable/providers/: __init__.py  _helpers.py  ckks.py  ilc.py  plaintext.py
tests/: test_contract.py  test_executable.py
